# pw

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.agent/: index.md
.agent/system/: architecture.md
.agent/tasks/: pw-cli.md
.github/workflows/: ci.yml  release.yml
docs/: USER_MANUAL.md
src/: cli.rs  clipboard.rs  entropy.rs  main.rs  output.rs  profile.rs  wordlist.rs
src/generator/: charset.rs  mod.rs  passphrase.rs  random.rs
tests/: integration.rs
